[gd_scene load_steps=4 format=3 uid="uid://cow1ps2r237w0"]

[ext_resource type="Texture2D" uid="uid://cvwhr7nkrey7h" path="res://menu/menu_resources/backgrounds/planet1.png" id="1_exoh1"]
[ext_resource type="Theme" uid="uid://dk83qmx0ytnuw" path="res://menu/menu_resources/themes/default_theme.tres" id="1_uq4o8"]
[ext_resource type="Script" path="res://menu/main_menus/title_screen.gd" id="2_0g1p0"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_uq4o8")
script = ExtResource("2_0g1p0")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_exoh1")

[node name="IUClipper" type="Control" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="IUClipper"]
clip_contents = true
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 284.0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="IUClipper/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="IUClipper/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2

[node name="Title2" type="RichTextLabel" parent="IUClipper/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 8
text = "   ____              _____                            __ 
  / __/_ _____  ____/ ___/__  ___  ___ ___ _____ ___ / /_
 / _/ \\ \\ / _ \\/___/ /__/ _ \\/ _ \\/ _ `/ // / -_|_-</ __/
/___//_\\_\\\\___/    \\___/\\___/_//_/\\_, /\\_,_/\\__/___/\\__/ 
                                   /_/                   "
fit_content = true
autowrap_mode = 0
shortcut_keys_enabled = false
meta_underlined = false
hint_underlined = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="HSeparator" type="HSeparator" parent="IUClipper/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="IUClipper/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host game"

[node name="JoinButton" type="Button" parent="IUClipper/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join game"

[node name="TutorialButton" type="Button" parent="IUClipper/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Tutorial"

[node name="SettingsButton" type="Button" parent="IUClipper/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Spacer" type="Control" parent="IUClipper/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ExitButton" type="Button" parent="IUClipper/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -73.0
offset_top = -22.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "beta v1.0.0 demo"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="pressed" from="IUClipper/PanelContainer/MarginContainer/VBoxContainer/HostButton" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="IUClipper/PanelContainer/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="IUClipper/PanelContainer/MarginContainer/VBoxContainer/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="IUClipper/PanelContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="IUClipper/PanelContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
